--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ ul {
     flex-direction: column;
     justify-content: center;
     line-height: 40px;
-    padding: 20px
+    padding: 20px;
 }
 
 li {
