updated media query

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ li {
     display: flex;
     flex-direction: column;
     padding: 20px;
-    background-color: white;
+    background-color: rgb(229, 219, 219);
     border: 4px solid lightblue;
     border-radius: 25px;
 }
@@ -35,3 +35,8 @@ h4 {
     font-size: large;
 }
 
+@media screen and (max-width: 420px){
+    body {
+        padding: 20px
+    }
+}
