--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ h4 {
 
 @media screen and (max-width: 420px){
     body {
-        padding: 20px
+        padding: 20px;
+        color: navy;
     }
 }
